--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MyActivity"/>
         </activity>
+
+        <provider
+            android:authorities="com.example.eddie.sunshine"
+            android:name=".data.WeatherProvider" />
+
     </application>
 
 </manifest>
